--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -80,7 +80,7 @@
 }
 
 @online{rdkit,
-  author = {Landrum, Greg},
+  author = {Landrum, Gregory A.},
   url    = {http://www.rdkit.org},
   title  = {RDKit: Open-source cheminformatics},
 }
@@ -251,7 +251,7 @@
 }
 
 @article{Zdrazil2023,
-  author       = {Zdrazil, Barbara and Felix, Eloy and Hunter, Fiona and Manners, Emma J and Blackshaw, James and Corbett, Sybilla and de Veij, Marleen and Ioannidis, Harris and Lopez, David Mendez and Mosquera, Juan F and Magarinos, Maria Paula and Bosc, Nicolas and Arcila, Ricardo and Kizilören, Tevfik and Gaulton, Anna and Bento, A Patrícia and Adasme, Melissa F and Monecke, Peter and Landrum, Gregory A and Leach, Andrew R},
+  author       = {Zdrazil, Barbara and Felix, Eloy and Hunter, Fiona and Manners, Emma J and Blackshaw, James and Corbett, Sybilla and de Veij, Marleen and Ioannidis, Harris and Lopez, David Mendez and Mosquera, Juan F and Magarinos, Maria Paula and Bosc, Nicolas and Arcila, Ricardo and Kizilören, Tevfik and Gaulton, Anna and Bento, A Patrícia and Adasme, Melissa F and Monecke, Peter and Landrum, Gregory A. and Leach, Andrew R},
   url          = {https://doi.org/10.1093/nar/gkad1004},
   date         = {2023-11},
   doi          = {10.1093/nar/gkad1004},
