--- a/notebooks/refresh-static-data.ipynb
+++ b/notebooks/refresh-static-data.ipynb
@@ -690,7 +690,9 @@
     "].isin(duplicates)\n",
     "\n",
     "\n",
-    "_comparison_group = df[comparison_idx][[\"molecule_chembl_id\", \"pchembl_value\"]].groupby(\"molecule_chembl_id\")\n",
+    "_comparison_group = df[comparison_idx][[\"molecule_chembl_id\", \"pchembl_value\"]].groupby(\n",
+    "    \"molecule_chembl_id\"\n",
+    ")\n",
     "comparison_df[\"new_mean\"] = _comparison_group.mean(numeric_only=True).values\n",
     "comparison_df[\"new_gmean\"] = _comparison_group.agg(stats.gmean).values.round(3)\n",
     "\n",
